WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234834
[LFC][IFC] fast/text/combining-mark-paint.html is failing (complex text)
https://bugs.webkit.org/show_bug.cgi?id=234834
Summary
[LFC][IFC] fast/text/combining-mark-paint.html is failing (complex text)
alan
Reported
2022-01-03 19:20:09 PST
ssia
Attachments
Patch
(3.89 KB, patch)
2022-01-03 19:34 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.12 KB, patch)
2022-01-04 12:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-03 19:34:43 PST
Created
attachment 448264
[details]
Patch
Antti Koivisto
Comment 2
2022-01-04 06:28:18 PST
Comment on
attachment 448264
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448264&action=review
> Source/WebCore/ChangeLog:8 > + Apparently it's perfectly valid to have zero width unicode character (e.g. macron) and
French again :(
> Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:105 > + && (!canUseSimpleFontCodePath || glyphData.font->widthForGlyph(glyphData.glyph)))
Weird that this is code path specific rather than based which glyph it is.
alan
Comment 3
2022-01-04 12:39:41 PST
Created
attachment 448325
[details]
Patch
EWS
Comment 4
2022-01-04 15:06:53 PST
Committed
r287591
(
245720@main
): <
https://commits.webkit.org/245720@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448325
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-01-04 15:07:21 PST
<
rdar://problem/87116969
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug