[LFC][IFC] fast/text/combining-mark-paint.html is failing (complex text) https://bugs.webkit.org/show_bug.cgi?id=234834

Reviewed by Antti Koivisto.

Apparently it's perfectly valid to have zero width unicode character (e.g. macron) and
still affect the line height.

* layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::fallbackFontsForRunWithIterator):



Canonical link: https://commits.webkit.org/245720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287591 268f45cc-cd09-0410-ab3c-d52691b4dbfc